--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="projeto ativo">
                 <a href="#" target="_blank">
                   <img
-                    src="./src/imagens/projeto-gta.png"
+                    src="https://via.placeholder.com/515X700"
                     alt="Projeto Landing page GTA"
                   />
                   <h3>Projeto 1</h3>
@@ -100,7 +100,7 @@
                   target="_blank"
                 >
                   <img
-                    src="./src/imagens/projeto-listagem-pokemon.png"
+                    src="https://via.placeholder.com/515X700"
                     alt="Projeto listagem de pokemons"
                   />
                   <h3>Projeto 2</h3>
@@ -117,7 +117,7 @@
                   target="_blank"
                 >
                   <img
-                    src="./src/imagens/projeto-one-piece.png"
+                    src="https://via.placeholder.com/515X700"
                     alt="Projeto landing page One Piece"
                   />
                   <h3>Projeto 3</h3>
@@ -131,7 +131,7 @@
               <div class="projeto ativo">
                 <a href="#" target="_blank">
                   <img
-                    src="./src/imagens/projeto-x-men.png"
+                    src="https://via.placeholder.com/515X700"
                     alt="Projeto seletor de personagens x-men"
                   />
                   <h3>Projeto 4</h3>
